--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,10 @@
 <html>
 <head>
     <title>
-        {% block title %}
-            BusFinder
-        {% endblock %}
+        {% block title %}BusFinder{% endblock %}
     </title>
 
-    <link rel="icon" type="image/x-ico" href="{% static 'favicon.ico' %}" />
+    <link rel="icon" type="image/x-ico "href="{% static 'favicon.ico' %}" />
     <link rel="shortcut icon" type="image/x-ico" href="{% static 'favicon.ico' %}" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=0.25,maximum-scale=3,user-scalable=1" />
 
